# facebook_marketing_tool

./: .gitignore  buildRes.py  main.py  pyproject.toml
resources/: resources.qrc  resources_rc.py  styles
src/: settings.py
src/gui/: main_window.py  styles.py  window_control.py
src/gui/custom_widget/: custom_grips.py  highlight_label.py  highlight_plaintext.py  highlighted_widget.py  image_viewer.py  table_widget.py
src/gui/widget/: __init__.py  comment_ui.py  interface.ui  post_ui.py  spam_ui.py  tableWidget.ui  ui_interface.py  ui_tableWidget.py
src/gui/worker_ui/: __init__.py  comment_ui.py  get_ui.py  login_ui.py  post_ui.py  proxy_ui.py  spam_ui.py
src/manager/: __init__.py  data_manager.py  driver_manager.py
src/utils/: __init__.py  helpers.py
src/worker/: __init__.py  comment.py  get_group.py  get_post.py  login.py  post.py  proxy.py  spam.py
