[project]
name = "facebook-marketing-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blinker==1.7.0",
    "pyotp>=2.9.0",
    "pyperclip>=1.11.0",
    "pyside6>=6.10.2",
    "selenium>=4.41.0",
    "selenium-wire>=5.1.0",
    "setuptools==81.0.0",
    "webdriver-manager>=4.0.2",
]